--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>Campeones del muundo</h1>
+        <h1>Campeones del mundo</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">inicio</a></li>
                 <li><a href="./productos.html">productos</a></li>
                 <li><a href="./servicios.html">servicios</a></li>
-                <li><a href="./contacto.html">contactos</a></li>
+                <li><a href="./contacto.html">contacto</a></li>
                 <li><a href="./nosotros.html">nosotros</a></li>
             </ul>
         </nav>
