--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -15,7 +15,7 @@
                 <li><a href="../index.html">inicio</a></li>
                 <li><a href="./productos.html">productos</a></li>
                 <li><a href="./servicios.html">servicios</a></li>
-                <li><a href="./contacto.html">contactos</a></li>
+                <li><a href="./contacto.html">contacto</a></li>
                 <li><a href="./nosotros.html">nosotros</a></li>
             </ul>
         </nav>
