--- a/index.html
+++ b/index.html
@@ -1,73 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mundial catar 2022</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <header>
-        <h1>Campeones del mundo</h1>
-        <nav>
-            <ul>
-                <li><a href="./index.html">inicio</a></li>
-                <li><a href="./pages/productos.html">productos</a></li>
-                <li><a href="./pages/servicios.html">servicios</a></li>
-                <li><a href="./pages/contacto.html">contacto</a></li>
-                <li><a href="./pages/nosotros.html">nosotros</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="content-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                    aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <a class="navbar-brand" href="#">
+                        <img src="./img/icono-header.png" alt="icono copa">
+                    campeones
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="./index.html">inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/productos.html">productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/servicios.html">servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/nosotros.html">nosotros</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <section class="hero">
-            <h2>somos campeones otra vez</h2>
+            <h1>somos campeones otra vez</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipis</p>
         </section>
         <section class="texto">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis non earum nulla, eius ipsum. Quia, voluptate iste. Modi quibusdam esse omnis dignissimos exercitationem a in repellat, cum, cupiditate itaque quasi earum maxime, suscipit ad illo veniam ipsam similique inventore adipisci hic? Deleniti pariatur perferendis incidunt sint consequuntur molestiae est quod saepe assumenda. Nisi iure mollitia rerum placeat quia, odit voluptates.
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis
+                non earum nulla, eius ipsum. Quia, voluptate iste. Modi quibusdam esse
+                omnis dignissimos exercitationem a in repellat, cum, cupiditate itaque
+                quasi earum maxime, suscipit ad illo veniam ipsam similique inventore
+                adipisci hic? Deleniti pariatur perferendis incidunt sint consequuntur
+                molestiae est quod saepe assumenda. Nisi iure mollitia rerum placeat
+                quia, odit voluptates.
             </p>
         </section>
         <section class="partidos">
             <h2>Reviví los momentos que nos llevaron a la gloria eterna</h2>
             <div class="partidosGrupos">
                 <div class="partidosDiv">
-                    <img src="./img/argentinavsarabia.jpg" alt="imagen de argentina vs arabia">
+                    <img src="./img/argentinavsarabia.jpg" alt="imagen de argentina vs arabia" />
                     <h3>Argentina vs Arabia</h3>
                     <a href="https://www.youtube.com/watch?v=UsTQShSZPRc" target="_blank">ver resumen</a>
                 </div>
                 <div class="partidosDiv">
-                    <img src="./img/argentinavsmexico.jfif" alt="imagen de argentina vs mexico">
+                    <img src="./img/argentinavsmexico.jfif" alt="imagen de argentina vs mexico" />
                     <h3>Arentina vs México</h3>
                     <a href="https://www.youtube.com/watch?v=cP35DOe47H4" target="_blank">ver resumen</a>
                 </div>
                 <div class="partidosDiv">
-                    <img src="./img/argentinavspolonia.jfif" alt="imagen argentina vs polonia">
+                    <img src="./img/argentinavspolonia.jfif" alt="imagen argentina vs polonia" />
                     <h3>Argentina vs Polonia</h3>
                     <a href="https://www.youtube.com/watch?v=wfwSZB9m2bM" target="_blank">ver resumen</a>
                 </div>
             </div>
             <div class="partidosEliminacion">
                 <div class="partidosDiv">
-                    <img src="./img/argentina-vs-australia-qatar-2022.jpg" alt="imagen de argentina vs australia">
+                    <img src="./img/argentina-vs-australia-qatar-2022.jpg" alt="imagen de argentina vs australia" />
                     <h3>Octavos (Arg vs Aus)</h3>
                     <a href="https://www.youtube.com/watch?v=xoVj4ne_r1Q" target="_blank">ver resumen</a>
                 </div>
                 <div class="partidosDiv">
-                    <img src="./img/argentinavsholanda.jpg" alt="imagen de argentina vs holanda">
+                    <img src="./img/argentinavsholanda.jpg" alt="imagen de argentina vs holanda" />
                     <h3>Cuartos (Arg vs Pba)</h3>
                     <a href="https://www.youtube.com/watch?v=sivI7x0BuFk" target="_blank">ver resumen</a>
                 </div>
                 <div class="partidosDiv">
-                    <img src="./img/argentinavscroacia.webp" alt="imagen de argentina vs croacia">
+                    <img src="./img/argentinavscroacia.webp" alt="imagen de argentina vs croacia" />
                     <h3>Semifinales (Arg vs Cro)</h3>
                     <a href="https://www.youtube.com/watch?v=lM1bF8hD8-g" target="_blank">ver resumen</a>
                 </div>
             </div>
             <div class="partidosFinal">
                 <div class="partidosDiv">
-                    <img src="./img/argentinavsfrancia.jpg" alt="imagen de argentina vs francia">
+                    <img src="./img/argentinavsfrancia.jpg" alt="imagen de argentina vs francia" />
                     <h3>Final (Arg vs Fra)</h3>
                     <a href="https://www.youtube.com/watch?v=YkCz8d3xxAM" target="_blank">ver resumen</a>
                 </div>
@@ -75,12 +106,15 @@
         </section>
     </main>
     <div class="fixed">
-        <img src="./img/escudo-de-afa.png" alt="icono afa">
+        <img src="./img/escudo-de-afa.png" alt="icono afa" />
     </div>
     <footer>
-        <a href="https://es-la.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="logo facebook"></a>
-        <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="logo instagram"></a>
-        <a href="https://twitter.com/" target=" blank"><img src="./img/gorjeo.png" alt="logo twitter"></a>
+        <a href="https://es-la.facebook.com/" target="_blank"><img src="./img/facebook.png" alt="logo facebook" /></a>
+        <a href="https://www.instagram.com/" target="_blank"><img src="./img/instagram.png" alt="logo instagram" /></a>
+        <a href="https://twitter.com/" target=" blank"><img src="./img/gorjeo.png" alt="logo twitter" /></a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
+
 </html>
