--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,24 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <h1>Campeones del mundo</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">inicio</a></li>
-                <li><a href="./productos.html">productos</a></li>
-                <li><a href="./servicios.html">servicios</a></li>
-                <li><a href="./contacto.html">contacto</a></li>
-                <li><a href="./nosotros.html">nosotros</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="content-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                    aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <a class="navbar-brand" href="#">
+                        <img src="../img/icono-header.png" alt="icono copa">
+                    campeones
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./productos.html">productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./servicios.html">servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./nosotros.html">nosotros</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main>
         <section class="contacto">
-            <h2>Registrate</h2>
+            <h1>Registrate</h1>
             <form action="">
                 <div class="form">
                     <label for="nombre">nombre</label>
@@ -57,7 +79,7 @@
                     <h2>dejanos tu mensaje</h2>
                     <textarea name="" id="" cols="30" rows="10"></textarea>
                 </div>
-                <div class="grid-items">
+                <div>
                     <input type="submit" value="enviar formulario">
                     <input type="reset" value="limpiar formulario">
                 </div>
@@ -72,5 +94,6 @@
         <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt=""></a>
         <a href="https://twitter.com/" target="_blank"><img src="../img/gorjeo.png" alt=""></a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
