--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nosotros</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <h1>Campeones del mundo</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">inicio</a></li>
-                <li><a href="./productos.html">productos</a></li>
-                <li><a href="./servicios.html">servicios</a></li>
-                <li><a href="./contacto.html">contactos</a></li>
-                <li><a href="./nosotros.html">nosotros</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="content-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+                    aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <a class="navbar-brand" href="#">
+                        <img src="../img/icono-header.png" alt="icono copa">
+                    campeones
+                    </a>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../index.html">inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./productos.html">productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./servicios.html">servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">contacto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./nosotros.html">nosotros</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main class="nosotros">
         <section>
-            <h2>Lorem ipsum dolor sit amet.</h2>
-            <img src="" alt="imagen de...">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto architecto repellendus aut, tenetur minima laborum corrupti et asperiores eligendi quaerat incidunt sit delectus soluta nobis illo tempore consequatur officia placeat?</p>
-            <img src="" alt="imagen de...">
+            <h1>Lorem ipsum dolor sit amet.</h1>
+            <img src="../img/nosotros-img2.jpg" alt="festejos argentina">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto architecto repellendus aut, tenetur
+                minima laborum corrupti et asperiores eligendi quaerat incidunt sit delectus soluta nobis illo tempore
+                consequatur officia placeat?</p>
+            <img src="../img/nosotros-img1.jpeg" alt="festejos argentina">
         </section>
-        <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6554.079041738203!2d-58.53292837395045!3d-34.77978037165694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccfdee199c2e9%3A0xce5afb4539af59ec!2sA.F.A.%20Predio%20Ezeiza!5e0!3m2!1ses-419!2sar!4v1673548700834!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6554.079041738203!2d-58.53292837395045!3d-34.77978037165694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccfdee199c2e9%3A0xce5afb4539af59ec!2sA.F.A.%20Predio%20Ezeiza!5e0!3m2!1ses-419!2sar!4v1673548700834!5m2!1ses-419!2sar"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
     </main>
     <div class="fixed">
         <img src="../img/escudo-de-afa.png" alt="icono escudo afa">
@@ -37,5 +69,9 @@
         <a href="https://www.instagram.com/" target="_blank"><img src="../img/instagram.png" alt=""></a>
         <a href="https://twitter.com/" target="_blank"><img src="../img/gorjeo.png" alt=""></a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
