tercera pre entrega

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="futbol, copa del mundo, mundial, qatar, messi, argentina, seleccion, maradona, dibu martinez, campeon, campeones, scaloni, di maria, julian alvarez, enzo fernandez">
+    <meta name="description" content="¡MUCHACHOOS! revivamos los partidos que nos llevaron a ser campeones del mundo tras 36 años. ademas podras comprar los mejores productos de la selccion">
+    <meta property="og:type" content="web site">
+    <meta property="og:title" content="campeones del mundo">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>servicios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
@@ -82,22 +87,22 @@
                 <img src="../img/img-julian-1.webp" alt="12">
             </div>
             <div class="grid-items img-2">
-                <img src="../img/img-maradona-messi.webp" alt="">
+                <img src="../img/img-maradona-messi.webp" alt="13">
             </div>
             <div class="grid-items">
-                <img src="../img/img-2.jpeg" alt="">
+                <img src="../img/img-2.jpeg" alt="14">
             </div>
             <div class="grid-items">
-                <img src="../img/img-3.jpg" alt="">
+                <img src="../img/img-3.jpg" alt="15">
             </div>
             <div class="grid-items">
-                <img src="../img/img-4.jpg" alt="">
+                <img src="../img/img-4.jpg" alt="16">
             </div>
             <div class="grid-items">
-                <img src="../img/img-5.jpg" alt="">
+                <img src="../img/img-5.jpg" alt="17">
             </div>
             <div class="grid-items">
-                <img src="../img/img-6.jpeg" alt="">
+                <img src="../img/img-6.jpeg" alt="18">
             </div>
         </section>
     </main>
