--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,10 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="futbol, copa del mundo, mundial, qatar, messi, argentina, seleccion, maradona, dibu martinez, campeon, campeones, scaloni, di maria, julian alvarez, enzo fernandez">
+    <meta name="description" content="¡MUCHACHOOS! revivamos los partidos que nos llevaron a ser campeones del mundo tras 36 años. ademas podras comprar los mejores productos de la selccion">
+    <meta property="og:type" content="web site">
+    <meta property="og:title" content="campeones del mundo">
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
     <header>
@@ -44,8 +49,8 @@
             </div>
         </nav>
     </header>
-    <main class="nosotros">
-        <section>
+    <main>
+        <section class="nosotros">
             <h1>Lorem ipsum dolor sit amet.</h1>
             <img src="../img/nosotros-img2.jpg" alt="festejos argentina">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto architecto repellendus aut, tenetur
@@ -53,13 +58,6 @@
                 consequatur officia placeat?</p>
             <img src="../img/nosotros-img1.jpeg" alt="festejos argentina">
         </section>
-        <div>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6554.079041738203!2d-58.53292837395045!3d-34.77978037165694!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccfdee199c2e9%3A0xce5afb4539af59ec!2sA.F.A.%20Predio%20Ezeiza!5e0!3m2!1ses-419!2sar!4v1673548700834!5m2!1ses-419!2sar"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
     </main>
     <div class="fixed">
         <img src="../img/escudo-de-afa.png" alt="icono escudo afa">
