--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="futbol, copa del mundo, mundial, qatar, messi, argentina, seleccion, maradona, dibu martinez, campeon, campeones, scaloni, di maria, julian alvarez, enzo fernandez">
-    <meta name="description" content="¡MUCHACHOOS! revivamos los partidos que nos llevaron a ser campeones del mundo tras 36 años. ademas podras comprar los mejores productos de la selccion"><meta property="og:type" content="web site">
+    <meta name="description" content="¡MUCHACHOOS! revivamos los partidos que nos llevaron a ser campeones del mundo tras 36 años. ademas podras comprar los mejores productos de la selccion">
+    <meta property="og:type" content="web site">
     <meta property="og:title" content="campeones del mundo">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <title>Mundial catar 2022</title>
