--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,8 +8,9 @@
     <meta name="description" content="¡MUCHACHOOS! revivamos los partidos que nos llevaron a ser campeones del mundo tras 36 años. ademas podras comprar los mejores productos de la selccion">
     <meta property="og:type" content="web site">
     <meta property="og:title" content="campeones del mundo">
+    <meta property="og:url" content="https://campeones33185.000webhostapp.com/">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-    <title>Mundial catar 2022</title>
+    <title>campeones del mundo 2022</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/estilos.css" />
@@ -36,7 +36,7 @@
                             <a class="nav-link" href="./pages/productos.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/servicios.html">servicios</a>
+                            <a class="nav-link" href="./pages/galeria.html">galeria</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/contacto.html">contacto</a>
