--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,6 +8,7 @@
     <meta name="description" content="¡MUCHACHOOS! revivamos los partidos que nos llevaron a ser campeones del mundo tras 36 años. ademas podras comprar los mejores productos de la selccion">
     <meta property="og:type" content="web site">
     <meta property="og:title" content="campeones del mundo">
+    <meta property="og:url" content="https://campeones33185.000webhostapp.com/">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -34,7 +35,7 @@
                             <a class="nav-link" href="./productos.html">productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./servicios.html">servicios</a>
+                            <a class="nav-link" href="./galeria.html">galeria</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./contacto.html">contacto</a>
