--- a/index.html
+++ b/index.html
@@ -51,18 +51,14 @@
     </header>
     <main>
         <section class="hero">
-            <h1>somos campeones otra vez</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipis</p>
+            <h1>¡somos campeones otra vez!</h1>
+            <p>¡gracias seleccion por otra alegria!</p>
         </section>
         <section class="texto">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio omnis
-                non earum nulla, eius ipsum. Quia, voluptate iste. Modi quibusdam esse
-                omnis dignissimos exercitationem a in repellat, cum, cupiditate itaque
-                quasi earum maxime, suscipit ad illo veniam ipsam similique inventore
-                adipisci hic? Deleniti pariatur perferendis incidunt sint consequuntur
-                molestiae est quod saepe assumenda. Nisi iure mollitia rerum placeat
-                quia, odit voluptates.
+            Despues de 36 años volvimos a ser campeones del mundo, despues de tanto sufrir se nos dio lo que tanto deseabamos y que tan esquivo se nos hacía.
+            Gracias a todos los jugadores y al cuerpo tecnico el pueblo despues de muchisimo tiempo finalmente tuvo una alegría que a pesar de que el pais atraviesa momentos muy dificiles en todo sentido, nos hizo olvidar por lo menos un rato y nos hizo felices otra vez.
+            Este es un sitio en el cual poder rememorar los partidos que nos llevaron a la copa y de alguna manera agradecer a esta seleccion.  
             </p>
         </section>
         <section class="partidos">
