--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,6 +51,10 @@
     <main>
         <section class="contacto">
             <h1>Registrate</h1>
+            <p>
+                Ganate una entrada para el proximo amistoso que jugará la selección en Santiago Del Estero.
+                solamente completá este formulario y serás contactado por correo inmediatamente.
+            </p>
             <form action="">
                 <div class="form">
                     <label for="nombre">nombre</label>
