--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -49,7 +49,7 @@
         </nav>
     </header>
     <main class="servicios">
-        <h1>estos son nuestros campeones del mundo</h1>
+        <h1>Estas son algunas imagenes de aquel mágico día</h1>
         <section class="grid-galeria">
             <div class="grid-items">
                 <img src="../img/img-messi-1.webp" alt="1">
