--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -51,11 +51,13 @@
     </header>
     <main>
         <section class="nosotros">
-            <h1>Lorem ipsum dolor sit amet.</h1>
+            <h1>Los festejos en Argentina</h1>
             <img src="../img/nosotros-img2.jpg" alt="festejos argentina">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto architecto repellendus aut, tenetur
-                minima laborum corrupti et asperiores eligendi quaerat incidunt sit delectus soluta nobis illo tempore
-                consequatur officia placeat?</p>
+            <p>
+                Así se vivió, asi se festejo y asi se disfrutó la tercera conquista del torneo mas importante del deporte en nuestro país.
+                Se estiman entre 5 y 6 millones de personas reunidas solamente en buenos aires para esperar y festejar con nuestros jugadores, muchisimo mas concurrido que en los ultimos paises campeones del mundo.
+                Esto demuestra que para nosotros esto no es tan solo un deporte, es una pasión.
+            </p>
             <img src="../img/nosotros-img1.jpeg" alt="festejos argentina">
         </section>
     </main>
