--- a/pages/productos.html
+++ b/pages/productos.html
@@ -51,7 +51,9 @@
     <main>
         <section class="productos">
             <h1>Compra los productos de la selección</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci impedit laudantium, suscipit cupiditate illum a quos, magnam laborum sequi odio explicabo dolore error. Veritatis vero eaque quibusdam sit quasi quia.</p>
+            <p>
+                En este apartado podrás comprar los productos de la seleccion Argentina para estar siempre preparado para alentar a nuestros jugadores.
+            </p>
             <div class="productosUno">
                 <div>
                     <img src="../img/camiseta-tres-estrellas.webp" alt="imagen de camiseta titular argentina tres estrellas">
