--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <meta name="description" content="¡MUCHACHOOS! revivamos los partidos que nos llevaron a ser campeones del mundo tras 36 años. ademas podras comprar los mejores productos de la selccion">
     <meta property="og:type" content="web site">
     <meta property="og:title" content="campeones del mundo">
-    <meta property="og:url" content="https://campeones33185.000webhostapp.com/">
+    <meta property="og:url" content="https://campeones-del-mundo.netlify.app/">
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
     <title>contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
